MAT-2105 Fix padding and gap for view course button

--- a/src/components/LearningCenterCard/LearningCenterCard.module.css
+++ b/src/components/LearningCenterCard/LearningCenterCard.module.css
@@ -95,6 +95,8 @@
     font-style: normal;
     font-weight: 700;
     line-height: 90%;
+    padding:12px 20px;
+    gap: 10px;
 }
 
 .viewCourseBtn:active {
